--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <title>Fast Food</title>
   </head>
   <body>
-    <nav>
+    <nav class="nav-bar">
       <a href="#home">Home</a>
       <a href="#specialdeals">Special Deals</a>
       <a href="#prices">Prices</a>
       <a href="#shop">Shop</a>
-      <a href="#orderBtn">Order Now</a>
+      <a href="#orderBtn" class="order-btn">Order Now</a>
     </nav>
     <main></main>
     <footer></footer>
