--- a/index.html
+++ b/index.html
@@ -4,16 +4,30 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- font awesome -->
+    <script
+      src="https://kit.fontawesome.com/bfcbb8f6a3.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- custom css link -->
     <link rel="stylesheet" href="styles/styles.css" />
     <title>Fast Food</title>
   </head>
   <body>
     <nav class="nav-bar">
-      <a href="#home">Home</a>
-      <a href="#specialdeals">Special Deals</a>
-      <a href="#prices">Prices</a>
-      <a href="#shop">Shop</a>
+      <a href="#home"
+        ><span><i class="fa-solid fa-house-chimney"></i></span>Home</a
+      >
+      <a href="#specialdeals"
+        ><span><i class="fa-solid fa-money-bill-1-wave"></i></span>Special
+        Deals</a
+      >
+      <a href="#prices"
+        ><span><i class="fa-solid fa-tag"></i></span>Prices</a
+      >
+      <a href="#shop"
+        ><span><i class="fa-solid fa-cart-shopping"></i></span>Shop</a
+      >
       <a href="#orderBtn" class="order-btn">Order Now</a>
     </nav>
     <main></main>
