add image to home page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,14 @@
       >
       <a href="#orderBtn" class="order-btn">Order Now</a>
     </nav>
-    <main></main>
+    <main>
+      <section>
+        <figure>
+          <img src="imgs/burger1.png" alt="Image of burger" />
+          <figcaption>Mouthwatering</figcaption>
+        </figure>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
