--- a/index.html
+++ b/index.html
@@ -14,21 +14,8 @@
     <title>Fast Food</title>
   </head>
   <body>
-    <nav class="nav-bar">
-      <a href="#home"
-        ><span><i class="fa-solid fa-house-chimney"></i></span>Home</a
-      >
-      <a href="#specialdeals"
-        ><span><i class="fa-solid fa-money-bill-1-wave"></i></span>Special
-        Deals</a
-      >
-      <a href="#prices"
-        ><span><i class="fa-solid fa-tag"></i></span>Prices</a
-      >
-      <a href="#shop"
-        ><span><i class="fa-solid fa-cart-shopping"></i></span>Shop</a
-      >
-      <a href="#orderBtn" class="order-btn">Order Now</a>
+    <nav class="title-nav">
+      <p>Sunrise Food</p>
     </nav>
     <main>
       <section>
@@ -38,6 +25,29 @@
         </figure>
       </section>
     </main>
-    <footer></footer>
+    <footer class="footer-nav">
+      <nav>
+        <a href="#home">
+          <span><i class="fa-solid fa-house-chimney"></i></span>
+          <span class="icon-text">Home</span>
+        </a>
+        <a href="#specialdeals">
+          <span><i class="fa-solid fa-money-bill-1-wave"></i></span>
+          <span class="icon-text">Special Deals</span>
+        </a>
+        <a href="#prices">
+          <span><i class="fa-solid fa-tag"></i></span>
+          <span class="icon-text"></span>
+        </a>
+        <a href="#shop">
+          <span><i class="fa-solid fa-cart-shopping"></i></span>
+          <span class="icon-text">Shop</span>
+        </a>
+        <a href="#orderBtn" class="order-btn">
+          <span><i class="fa-solid fa-cart-shopping"></i></span>
+          <span class="icon-text">Order Now</span>
+        </a>
+      </nav>
+    </footer>
   </body>
 </html>
