change style of nav bar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   </head>
   <body>
     <nav class="title-nav">
-      <p>Sunrise Food</p>
+      <span>Sunrise Food</span>
+      <span><i class="fa-solid fa-burger"></i></span>
     </nav>
     <main>
       <section>
