update style to footer

--- a/index.html
+++ b/index.html
@@ -27,28 +27,22 @@
       </section>
     </main>
     <footer class="footer-nav">
-      <nav>
-        <a href="#home">
-          <span><i class="fa-solid fa-house-chimney"></i></span>
-          <span class="icon-text">Home</span>
-        </a>
-        <a href="#specialdeals">
-          <span><i class="fa-solid fa-money-bill-1-wave"></i></span>
-          <span class="icon-text">Special Deals</span>
-        </a>
-        <a href="#prices">
-          <span><i class="fa-solid fa-tag"></i></span>
-          <span class="icon-text"></span>
-        </a>
-        <a href="#shop">
-          <span><i class="fa-solid fa-cart-shopping"></i></span>
-          <span class="icon-text">Shop</span>
-        </a>
-        <a href="#orderBtn" class="order-btn">
-          <span><i class="fa-solid fa-cart-shopping"></i></span>
-          <span class="icon-text">Order Now</span>
-        </a>
-      </nav>
+      <a href="#home">
+        <i class="fa-solid fa-clipboard"></i>
+        <p>Menu</p>
+      </a>
+      <a href="#specialdeals">
+        <i class="fa-solid fa-heart"></i>
+        <p>Favourite</p>
+      </a>
+      <a href="#prices">
+        <i class="fa-solid fa-cart-shopping"></i>
+        <p>Cart</p>
+      </a>
+      <a href="#shop">
+        <i class="fa-solid fa-user"></i>
+        <p>Profile</p>
+      </a>
     </footer>
   </body>
 </html>
