fix footer to botton of screen

--- a/index.html
+++ b/index.html
@@ -20,26 +20,26 @@
     </nav>
     <main>
       <section>
-        <figure>
+        <figure class="burger-pic">
           <img src="imgs/burger1.png" alt="Image of burger" />
           <figcaption>Mouthwatering</figcaption>
         </figure>
       </section>
     </main>
     <footer class="footer-nav">
-      <a href="#home">
+      <a href="#">
         <i class="fa-solid fa-clipboard"></i>
         <p>Menu</p>
       </a>
-      <a href="#specialdeals">
+      <a href="#">
         <i class="fa-solid fa-heart"></i>
         <p>Favourite</p>
       </a>
-      <a href="#prices">
+      <a href="#">
         <i class="fa-solid fa-cart-shopping"></i>
         <p>Cart</p>
       </a>
-      <a href="#shop">
+      <a href="#">
         <i class="fa-solid fa-user"></i>
         <p>Profile</p>
       </a>
