change images and add text for images

--- a/index.html
+++ b/index.html
@@ -21,8 +21,25 @@
     <main>
       <section>
         <figure class="burger-pic">
-          <img src="imgs/burger1.png" alt="Image of burger" />
-          <figcaption>Mouthwatering</figcaption>
+          <img
+            src="images/seedy-burger.avif"
+            alt="Image of seed filled burger."
+          />
+          <figcaption>
+            <h3>Beef Patty</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          </figcaption>
+        </figure>
+
+        <figure class="burger-pic">
+          <img
+            src="images/mustard-burger.avif"
+            alt="Image of burger with mustard sauce."
+          />
+          <figcaption>
+            <h3>Mustard & Onion</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+          </figcaption>
         </figure>
       </section>
     </main>
