fix nav bar to top and add carousel section

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
       <span><i class="fa-solid fa-burger"></i></span>
     </nav>
     <main>
+      <!-- carousel -->
+      <section class="carousel">
+        <h1>Special Offers</h1>
+      </section>
+
       <section>
         <figure class="burger-pic">
           <img
