add and style extra images

--- a/index.html
+++ b/index.html
@@ -19,31 +19,42 @@
       <span><i class="fa-solid fa-burger"></i></span>
     </nav>
     <main>
-      <!-- carousel -->
-      <section class="carousel">
+      <header class="title">
         <h1>Special Offers</h1>
-      </section>
+      </header>
 
-      <section>
-        <figure class="burger-pic">
-          <img
-            src="images/seedy-burger.avif"
-            alt="Image of seed filled burger."
-          />
-          <figcaption>
-            <h3>Beef Patty</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-          </figcaption>
-        </figure>
-
+      <section class="main">
         <figure class="burger-pic">
           <img
             src="images/mustard-burger.avif"
             alt="Image of burger with mustard sauce."
           />
           <figcaption>
-            <h3>Mustard & Onion</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+            <p>Mustard & Onion</p>
+          </figcaption>
+        </figure>
+
+        <figure class="burger-pic">
+          <img
+            src="images/seedy-burger.avif"
+            alt="Image of seed filled burger."
+          />
+          <figcaption>
+            <p>Beef Patty</p>
+          </figcaption>
+        </figure>
+
+        <figure class="burger-pic">
+          <img src="images/tomato-burger.avif" alt="Image of tomato burger." />
+          <figcaption>
+            <p>Tomato Lettuce</p>
+          </figcaption>
+        </figure>
+
+        <figure class="burger-pic">
+          <img src="images/messy-burger.avif" alt="Image of messy burger." />
+          <figcaption>
+            <p>Messy Slope</p>
           </figcaption>
         </figure>
       </section>
