add and style button

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
           </figcaption>
         </figure>
       </section>
+
+      <button class="order-btn">Order Now</button>
     </main>
     <footer class="footer-nav">
       <a href="#">
